# Auto-resolve-Service-Desk

./: .env.simple  .eslintrc.json  .gitignore  README.md  global.json  pyproject.toml  requirements.txt  tsconfig.json
agents/analytics-agent/: package-lock.json  package.json  tsconfig.json
agents/analytics-agent/src/: analytics.controller.ts  app.module.ts  main.ts
agents/automation-agent/: AutoResolveServiceDesk.AutomationAgent.sln
agents/automation-agent/AutomationAgent.Api/: AutomationAgent.Api.csproj  AutomationAgent.Api.http
agents/automation-agent/AutomationAgent.Api/Controllers/: AutomationController.cs
agents/automation-agent/AutomationAgent.Core/: Class1.cs
agents/automation-agent/AutomationAgent.Infrastructure/: AutomationAgent.Infrastructure.csproj  Class1.cs
agents/automation-agent/AutomationAgent.Tests/: AutomationAgent.Tests.csproj  UnitTest1.cs
agents/escalation-agent/: package-lock.json  package.json
agents/escalation-agent/src/: app.module.ts  escalation.controller.ts  main.ts
agents/knowledge-agent/: azure_integration.py  main.py  requirements.txt
agents/learning-agent/: main.py  requirements.txt
agents/triage-agent/: azure_integration.py  main.py  requirements-dev.txt  requirements.txt
components/agents/: KnowledgeAgent.cs  TriageAgent.cs
components/tests/: KnowledgeAgentTests.cs  TriageAgentTests.cs
dashboard/: demo-dashboard.html  index.html
demo-data/: azure-config.json  knowledge-base-data.json  knowledge-base-index.json  mock-tickets.json
integration/: IntegrationConfigurationManager.cs  IntegrationHealthMonitor.cs  IntegrationTests.cs  ServiceBusIntegrationManager.cs  TicketDataContract.cs
scripts/: create-search-index.ps1  create_search_index.py  create_servicebus_queues.py  demo_orchestrator.py  demo_orchestrator_dashboard.py  setup_demo.py  start-all.bat  test-e2e.js  test_azure_services.py  test_openai.py
shared/: service_bus_coordinator.py
shared/messaging/: service-bus.ts
