[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-resolve-service-desk"
version = "1.0.0"
description = "AI-Powered Developer Support Automation System - Python Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.5"
authors = [
    { name = "Auto-resolve Service Desk Team", email = "team@auto-resolve.dev" },
]
keywords = [
    "azure",
    "ai",
    "automation",
    "service-desk",
    "fastapi",
    "machine-learning",
    "hackathon"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi[all]==0.121.3",
    "azure-ai-ml==1.30.0",
    "azure-search-documents==11.6.0",
    "azure-identity==1.25.1",
    "azure-servicebus==7.12.3",
    "azure-eventgrid==4.19.0",
    "azure-monitor-opentelemetry==1.6.0",
    "scikit-learn==1.7.2",
    "sentence-transformers==2.2.2",
    "redis==5.10.0",
    "numpy==2.3.5",
    "pandas==2.1.4",
    "pydantic==2.12.4",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.25.2",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
    "mlflow==2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
    "factory-boy==3.3.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "bandit==1.7.5",
    "safety==2.3.5",
]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
    "factory-boy==3.3.0",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
    "mkdocstrings[python]==0.24.0",
]

[project.urls]
Homepage = "https://github.com/auto-resolve-service-desk/auto-resolve-service-desk"
Documentation = "https://auto-resolve-service-desk.readthedocs.io"
Repository = "https://github.com/auto-resolve-service-desk/auto-resolve-service-desk.git"
"Bug Tracker" = "https://github.com/auto-resolve-service-desk/auto-resolve-service-desk/issues"

[tool.hatch.version]
path = "agents/triage-agent/app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=agents",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "azure: marks tests that require Azure services",
]

[tool.coverage.run]
source = ["agents"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["agents", "shared", "tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "mlflow.*",
    "sentence_transformers.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".env",
    "env",
]